fix overflow issue in home page

--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -21,7 +21,7 @@
 }
 
 .slick-arrow {
-  display: none;
+  display: none !important;
 }
 
 .hero_bg::after {
